# local-llm

./: .gitignore  CLAUDE.md
docs/: LEARNINGS.md
gemma4-26b-a4b/: start.sh
gemma4-e2b/: gemma-e2b-20p.sh  launch.py  start.sh
gemma4-e4b/: start.sh
llm-workers/: .coverage  main.py  pyproject.toml
llm-workers/examples/: add_docstrings.py
llm-workers/src/llm_workers/: __init__.py  pool.py  tools.py  types.py  worker.py
llm-workers/tests/: test_tools.py
qwen35-27b/: start.sh
qwen35-27b-gguf/: start.sh
scripts/: bench.py  bench_e2b.py  claude-local.sh  compare_e2b.py  llama-proxy.py  run_bench.py  setup.sh  test.py  test_e2b_capability.py
scripts/lm_eval_tasks/: arc_challenge_gen.yaml
